tests/baselines/reference/jsxReactTestSuite.errors.txt
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(15,1): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(15,2): error TS2304: Cannot find name 'div'.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(17,1): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(17,2): error TS2304: Cannot find name 'div'.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(21,1): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(21,2): error TS2304: Cannot find name 'div'.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(22,3): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(22,4): error TS2304: Cannot find name 'div'.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(22,8): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(22,9): error TS2304: Cannot find name 'br'.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(23,3): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(23,19): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(23,20): error TS2304: Cannot find name 'br'.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(24,3): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(24,4): error TS2304: Cannot find name 'br'.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(28,1): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(32,1): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(33,5): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(37,3): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(37,4): error TS2304: Cannot find name 'div'.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(55,3): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(55,4): error TS2304: Cannot find name 'div'.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(58,5): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(58,6): error TS2304: Cannot find name 'span'.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(62,5): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(62,6): error TS2304: Cannot find name 'br'.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(69,3): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(69,4): error TS2304: Cannot find name 'div'.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(73,5): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(73,6): error TS2304: Cannot find name 'span'.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(79,1): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(79,2): error TS2304: Cannot find name 'div'.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(81,1): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(81,2): error TS2304: Cannot find name 'div'.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(83,1): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(85,1): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(87,1): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(87,2): error TS2503: Cannot find namespace 'Namespace'.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(89,1): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(89,2): error TS2503: Cannot find namespace 'Namespace'.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(91,1): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(94,1): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(97,1): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(97,2): error TS2304: Cannot find name 'font-face'.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(99,1): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(101,1): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(101,2): error TS2304: Cannot find name 'x-component'.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(103,1): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(105,1): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(107,1): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(109,1): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(112,1): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(112,38): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/jsxReactTestSuite.tsx(114,1): error TS2602: The global type 'JSX.Element' must exist when using JSX.


==== tests/cases/conformance/jsx/jsxReactTestSuite.tsx (54 errors) ====
    
    declare var React: any;
    declare var Component:any;
    declare var Composite:any;
    declare var Composite2:any;
    declare var Child:any;
    declare var Namespace:any;
    declare var foo: any;
    declare var bar: any;
    declare var y:any;
    declare var x:any;
    declare var z:any;
    declare var hasOwnProperty:any;
    
    <div>text</div>;
    ~~~~~~~~~~~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
     ~~~
!!! error TS2304: Cannot find name 'div'.
    
    <div>
    ~~~~~
     ~~~
!!! error TS2304: Cannot find name 'div'.
      {this.props.children}
    ~~~~~~~~~~~~~~~~~~~~~~~
    </div>;
    ~~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
    
    <div>
    ~~~~~
     ~~~
!!! error TS2304: Cannot find name 'div'.
      <div><br /></div>
    ~~~~~~~~~~~~~~~~~~~
      ~~~~~~~~~~~~~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
       ~~~
!!! error TS2304: Cannot find name 'div'.
           ~~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
            ~~
!!! error TS2304: Cannot find name 'br'.
      <Component>{foo}<br />{bar}</Component>
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
                      ~~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
                       ~~
!!! error TS2304: Cannot find name 'br'.
      <br />
    ~~~~~~~~
      ~~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
       ~~
!!! error TS2304: Cannot find name 'br'.
    </div>;
    ~~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
    
    
    <Composite>
    ~~~~~~~~~~~
        {this.props.children}
    ~~~~~~~~~~~~~~~~~~~~~~~~~
    </Composite>;
    ~~~~~~~~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
    
    <Composite>
    ~~~~~~~~~~~
        <Composite2 />
    ~~~~~~~~~~~~~~~~~~
        ~~~~~~~~~~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
    </Composite>;
    ~~~~~~~~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
    
    var x =
      <div
      ~~~~
       ~~~
!!! error TS2304: Cannot find name 'div'.
        attr1={
    ~~~~~~~~~~~
          "foo" + "bar"
    ~~~~~~~~~~~~~~~~~~~
        }
    ~~~~~
        attr2={
    ~~~~~~~~~~~
          "foo" + "bar" +
    ~~~~~~~~~~~~~~~~~~~~~
          
    ~~~~~~
          "baz" + "bug"
    ~~~~~~~~~~~~~~~~~~~
        }
    ~~~~~
        attr3={
    ~~~~~~~~~~~
          "foo" + "bar" +
    ~~~~~~~~~~~~~~~~~~~~~
          "baz" + "bug"
    ~~~~~~~~~~~~~~~~~~~
          // Extra line here.
    ~~~~~~~~~~~~~~~~~~~~~~~~~
        }
    ~~~~~
        attr4="baz">
    ~~~~~~~~~~~~~~~~
      </div>;
    ~~~~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
    
    (
      <div>
      ~~~~~
       ~~~
!!! error TS2304: Cannot find name 'div'.
        {/* A comment at the beginning */}
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
        {/* A second comment at the beginning */}
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
        <span>
    ~~~~~~~~~~
        ~~~~~~
         ~~~~
!!! error TS2304: Cannot find name 'span'.
          {/* A nested comment */}
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
        </span>
    ~~~~~~~~~~~
    ~~~~~~~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
        {/* A sandwiched comment */}
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
        <br />
    ~~~~~~~~~~
        ~~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
         ~~
!!! error TS2304: Cannot find name 'br'.
        {/* A comment at the end */}
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
        {/* A second comment at the end */}
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      </div>
    ~~~~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
    );
    
    (
      <div
      ~~~~
       ~~~
!!! error TS2304: Cannot find name 'div'.
        /* a multi-line
    ~~~~~~~~~~~~~~~~~~~
           comment */
    ~~~~~~~~~~~~~~~~~
        attr1="foo">
    ~~~~~~~~~~~~~~~~
        <span // a double-slash comment
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
         ~~~~
!!! error TS2304: Cannot find name 'span'.
          attr2="bar"
    ~~~~~~~~~~~~~~~~~
    ~~~~~~~~~~~~~~~~~
        />
    ~~~~~~
    ~~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
      </div>
    ~~~~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
    );
    
    <div>&nbsp;</div>;
    ~~~~~~~~~~~~~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
     ~~~
!!! error TS2304: Cannot find name 'div'.
    
    <div>&nbsp; </div>;
    ~~~~~~~~~~~~~~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
     ~~~
!!! error TS2304: Cannot find name 'div'.
    
    <hasOwnProperty>testing</hasOwnProperty>;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
    
    <Component constructor="foo" />;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
    
    <Namespace.Component />;
    ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
     ~~~~~~~~~
!!! error TS2503: Cannot find namespace 'Namespace'.
    
    <Namespace.DeepNamespace.Component />;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
     ~~~~~~~~~
!!! error TS2503: Cannot find namespace 'Namespace'.
    
    <Component { ... x } y
    ~~~~~~~~~~~~~~~~~~~~~~
    ={2 } z />;
    ~~~~~~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
    
    <Component
    ~~~~~~~~~~
        {...this.props} sound="moo" />;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
    
    <font-face />;
    ~~~~~~~~~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
     ~~~~~~~~~
!!! error TS2304: Cannot find name 'font-face'.
    
    <Component x={y} />;
    ~~~~~~~~~~~~~~~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
    
    <x-component />;
    ~~~~~~~~~~~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
     ~~~~~~~~~~~
!!! error TS2304: Cannot find name 'x-component'.
    
    <Component {...x} />;
    ~~~~~~~~~~~~~~~~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
    
    <Component { ...x } y={2} />;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
    
    <Component { ... x } y={2} z />;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
    
    <Component x={1} {...y} />;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
    
    
    <Component x={1} y="2" {...z} {...z}><Child /></Component>;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
                                         ~~~~~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
    
    <Component x="1" {...(z = { y: 2 }, z)} z={3}>Text</Component>;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
    
    
    